# clcc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pull.sh
includes/: clcc.h  internal.h
modules/: signal.h  stdio.h  stdlib.h  string.h  unistd.h
modules/sys/: msg.h  select.h  socket.h  wait.h
src/: signal.c  stdio.c  stdlib.c  string.c  unistd.c
src/sys/: msg.c  select.c  socket.c  wait.c
